--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "typescript": "^3.9.5",
+    "uuid": "^8.1.0",
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.11",
+    "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.5",
     "ts-node": "^8.10.2"
   },
